cmake_minimum_required(VERSION 3.15)
project(HunterCollege__)

set(CMAKE_CXX_STANDARD 17)

add_executable(HunterCollege__ main.cpp)
add_executable(program54 program54.cpp)
add_executable(program55 program55.cpp)
add_executable(program56 program56.cpp)
add_executable(program57 program57.cpp)

add_executable(program53 program53.cpp)
add_executable(program58 program58.cpp)
add_executable(program59 program59.cpp)
add_executable(program60 program60.cpp)
add_executable(quiz01 quiz01.cpp)
add_executable(Lab1A smaller.cpp)
add_executable(smaller3 smaller3.cpp)
add_executable(leap leap.cpp)
add_executable(month month.cpp)
add_executable(E1.7 E1.7.cpp)
add_executable(E2.10 E2.10.cpp)
add_executable(sum sum.cpp)
add_executable(calc calc.cpp)
add_executable(valid valid.cpp)
add_executable(print-interval print-interval.cpp)
add_executable(edit-array edit-array.cpp)
add_executable(fibonacci fibonacci.cpp)
add_executable(E4.8 E4.8.cpp)
add_executable(calc2 calc2.cpp)
add_executable(calc3 calc3.cpp)